--- a/pom.xml
+++ b/pom.xml
@@ -5,26 +5,36 @@
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>org.hypergraphdb</groupId>
-    <artifactId>hgdbapps</artifactId>
-    <version>1.3-SNAPSHOT</version>  
-  </parent>  
+    <artifactId>hypergraphdb</artifactId>
+    <version>1.4-SNAPSHOT</version>
+  </parent>
+
   <artifactId>hgdbwordnet</artifactId>
   <name>HyperGraphDB WordNet Persistence</name>
-  
+
   <dependencies>
-    <dependency>
+   
+   <dependency>
+  <groupId>net.sf.extjwnl</groupId>
+  <artifactId>extjwnl</artifactId>
+  <version>1.9.2</version>
+</dependency>
+<dependency>
+  <groupId>net.sf.extjwnl</groupId>
+  <artifactId>extjwnl-data-wn31</artifactId>
+  <version>1.2</version>
+</dependency>
+
+   
+   
+   <!--   <dependency>
       <groupId>net.sf.jwordnet</groupId>
       <artifactId>jwnl</artifactId>
       <version>1.4_rc3</version>
-    </dependency>
+    </dependency> -->
     <dependency>
       <groupId>org.hypergraphdb</groupId>
       <artifactId>hgdb</artifactId>
-      <version>${version}</version>
-    </dependency>	
-    <dependency>
-      <groupId>org.hypergraphdb</groupId>
-      <artifactId>hgdbmanagement</artifactId>
       <version>${version}</version>
     </dependency>
   </dependencies>
